crates/kaban-parser/tests/snapshots/statements__public_enum_decl_with_tags_only.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: pub enum Day {Sunday, Monday, Tuesday}

Block [
    EnumDeclWithNoGeneric {
        is_pub: true,
        name: Identifier("Day"),
        variant_decls: [
            EnumVariantDecl {
                variant_name: Identifier("Sunday"),
                type: "NONE",
            },
            EnumVariantDecl {
                variant_name: Identifier("Monday"),
                type: "NONE",
            },
            EnumVariantDecl {
                variant_name: Identifier("Tuesday"),
                type: "NONE",
            },
        ],
    },
]
