crates/kaban-parser/tests/snapshots/statements__public_func_decl_with_generic_constaint_interface_sugar.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: pub func foo(mut x: impl Serializable, y: impl Debug & impl Clone) -> T { let z = x + y; return z; }

Block [
    FuncDeclWithNoGeneric {
        is_pub: true,
        name: Identifier("foo"),
        params: [
            Param {
                binding: IdentifierBinding {
                    name: Identifier("x"),
                    mutable: true,
                },
                type: InterfaceConstraint(
                    Identifier("Serializable"),
                ),
            },
            Param {
                binding: IdentifierBinding {
                    name: Identifier("y"),
                    mutable: false,
                },
                type: AndGenericConstaint {
                    left: InterfaceConstraint(
                        Identifier("Debug"),
                    ),
                    right: InterfaceConstraint(
                        Identifier("Clone"),
                    ),
                },
            },
        ],
        return_type: NamedType(
            Identifier("T"),
        ),
        body: Block [
            Let {
                name: IdentifierBinding {
                    name: Identifier("z"),
                    mutable: false,
                },
                assignment: Add {
                    left: Identifier("x"),
                    right: Identifier("y"),
                },
            },
            Return(
                Identifier("z"),
            ),
        ],
    },
]
